# DNS-resolver

./: CMakeLists.txt  README.md
include/: DNSCache.h  DNSQuery.h  DNSResolver.h
src/: DNSCache.cpp  DNSQuery.cpp  DNSResolver.cpp  main.cpp
tests/: test.cpp  test_resolver.cpp
